--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
 </head>
 
@@ -44,16 +47,48 @@
                 <input class="dados__form__btn" type="submit" value="Converter" id="converter">
             </form>
         </div>
-        <div class="resultados">
+        <div class="resultados resultados--none">
             <div class="resultados__info">
-                <p><strong>Conversão</strong>"Euro/Real Brasileiro"</p>
-                <p><strong>Valor:</strong> R$5,99</p>
-                <p><strong>Moeda:</strong> Euro</p>
-                <p><strong>Data:</strong> 19:00:00 16/09/2005</p>
+                <ul>
+                    <li>
+                        <p><strong>Conversão:</strong><span id="name">"Euro/Real Brasileiro"</span>
+                        </p>
+                    </li>
+                    <li>
+                        <p><strong>Maximo:</strong> <span id="max">2</span>
+                            <i class="bi bi-arrow-up"></i>
+                        </p>
+                    </li>
+                    <li>
+                        <p><strong>Minimo:</strong> <span id="min">1</span>
+                            <i class="bi bi-arrow-down"></i>
+                        </p>
+                    </li>
+                    <li>
+                        <p><strong>Compra:</strong> <span id="compra">33</span></p>
+                    </li>
+                    <li>
+                        <p><strong>Venda:</strong> <span id="venda">44</span></p>
+                    </li>
+                    <li>
+                        <p><strong>Variação:</strong> <span id="var">vari</span>
+                            <i class="bi bi-arrow-down"></i>
+                            <i class="bi bi-arrow-up"></i>
+                        </p>
+                    </li>
+                    <li>
+                        <p><strong>Porcentagem variação:</strong><span id="porVar">porcenVa </span>
+                            <i class="bi bi-arrow-down"></i>
+                            <i class="bi bi-arrow-up"></i>
+                        </p>
+                    </li>
+                </ul>
+                <p class="resultados__info__date" id="date">Data: 16/08/3004
+                </p>
             </div>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 
